--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
-
 !DOCTYPE html>
 <html lang="pt-br">
 <head>
 <meta charset="UTF-8">
 
-<meta name="viewport" content="width=device-width, initial-
-scale=1.0">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <title>Home | Nossa Escola</title>
 <link rel="stylesheet" href="style.css">
@@ -40,8 +38,8 @@ scale=1.0">
     <p> </p>
     <img class="estudante-icone" src="logo_nossa_escola.png" alt="Link do Site da escola"></a>
     
-    <img class="estudante-icone" src="instagram.png" alt="Link do Instagram">
-    <img class="estudante-icone" src="facebook.png" alt="Link do Facebook">
+    <img class="estudante-icone" src="instagram (1).png" alt="Link do Instagram">
+    <img class="estudante-icone" src="facebook (1).png" alt="Link do Facebook">
     </div>
     <div class="estudante-div">
         <img class="estudante-imagem" src="estudante_menino_1.png" alt="Foto da turma do 1CDS do ano de 2023">
@@ -61,13 +59,11 @@ scale=1.0">
 <section class="estudante">
     <div class="estudantes_todos">
     <div class="estudante-div">
-    <img class="estudante-imagem" src="estudante_menina_1.png" alt="Foto da
-    turma do 1CDS do ano de 2023">
+    <img class="estudante-imagem" src="estudante_menina_1.png" alt="Foto da turma do 1CDS do ano de 2023">
     <h3 class="estudante-nome">Aluno 1</h3>
     <a href="https://cursos.alura.com.br/dashboard">
     <p> </p>
-    <img class="estudante-icone" src="site_school.png" alt="Link do Site da
-    escola"></a>
+    <img class="estudante-icone" src="logo_nossa_escola.png" alt="Link do Site da escola"></a>
     <img class="estudante-icone" src="instagram (1).png" alt="Link do Instagram">
     <img class="estudante-icone" src="facebook (1).png" alt="Link do Facebook">
     </div>
