--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@ scale=1.0">
  </div>
 <div class="estudante-div">
  <img class="estudante-imagem" src="estudante_menino_1 (1).png" alt="Foto da turma do 1CDS do ano de 2023">
+
  <h3 class="estudante-nome">Aluno 2</h3>
  <a href="https://cursos.alura.com.br/dashboard">
  <p> </p>
@@ -156,7 +157,7 @@ alt="Foto da turma do 1CDS do ano de 2023">
         <img class="estudante-icone" src="logo_nossa_escola (1).png" alt="Link do Site da escola"></a>
         
         <img class="estudante-icone" src="instagram (1) (1).png" alt="Link do Instagram">
-        v>
+        <img class="estudante-icone" src="facebook (1) (1).png" alt="Link do Facebook">
         </div>
         </div>
         </section>
