--- a/index.html
+++ b/index.html
@@ -1,1 +1,72 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset='utf-8'>
+    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+    <title>Unik Stell</title>
+    <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
+    <script src='main.js'></script>
+</head>
+<body>
+     <!-- Top Bar -->
+    <div class="topbar">
+        <div class="top-item">
+            <img src="https://img.icons8.com/ios-filled/50/000000/lock--v1.png" alt="compra segura" class="icon">
+            <span>COMPRA SEGURA</span>
+        </div>
+        <div class="top-item">
+            <img src="https://img.icons8.com/color/48/000000/pickup.png" alt="frete grátis" class="icon">
+            <span>FRETE GRÁTIS</span>
+        </div>
+        <div class="top-item">
+            <img src="https://img.icons8.com/color/48/000000/dollar.png" alt="parcelamento" class="icon">
+            <span>parcele em até em 12x</span>
+        </div>
+    </div>
 
+    <!-- Navbar -->
+    <nav class="navbar">
+        <div class="logo-neon">
+            <span class="unik">UNIK</span> <span class="stil">STIL</span>
+        </div>
+        <ul>
+            <li class="active"><span>INÍCIO</span></li>
+            <li>LOJA</li>
+            <li>MINHA CONTA</li>
+            <li>PERGUNTAS FREQUENTES</li>
+            <li>CONTATO</li>
+        </ul>
+        <div class="cart-icon">
+            <img src="https://img.icons8.com/ios-filled/50/000000/shopping-cart.png" alt="carrinho">
+        </div>
+    </nav>
+
+    <!-- Hero Section -->
+    <section class="hero">
+        <div class="hero-text">
+            <p class="headline">NÃO PERCA TEMPO PARA SE VESTIR.</p>
+            <p class="headline">QUALIDADE E MODA É COM A</p>
+            <div class="logo-neon large">
+                <span class="unik">UNIK</span> <span class="stil">STIL</span>
+            </div>
+        </div>
+        <div class="hero-image">
+            <img src="https://i.imgur.com/5v5bLZN.png" alt="camiseta branca" class="shirt-img">
+        </div>
+        <div class="best-clothes">
+            <span>AS MELHORES ROUPAS</span>
+            <img src="https://img.icons8.com/color/48/000000/crown.png" alt="coroa" class="crown">
+        </div>
+    </section>
+
+    <!-- Destaques -->
+    <div class="destaques-bar">
+        <span class="destaques-title">
+            <span class="destaques-underline"></span>
+            <span>destaques</span>
+            <span class="destaques-underline"></span>
+        </span>
+    </div>
+</body>
+</html>
