--- a/index.html
+++ b/index.html
@@ -18,64 +18,60 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- Top Bar -->
-    <div class="topbar">
-        <div class="top-item">
-            <img src="https://img.icons8.com/ios-filled/50/000000/lock--v1.png" alt="compra segura" class="icon">
-            <span>COMPRA SEGURA</span>
-        </div>
-        <div class="top-item">
-            <img src="https://img.icons8.com/color/48/000000/pickup.png" alt="frete grátis" class="icon">
-            <span>FRETE GRÁTIS</span>
-        </div>
-        <div class="top-item">
-            <img src="https://img.icons8.com/color/48/000000/dollar.png" alt="parcelamento" class="icon">
-            <span>parcele em até em 12x</span>
-        </div>
+ !DOCTYPE html>
+<html lang="pt-br">
+<head>
+  <meta charset="UTF-8">
+  <title>Unik Stil</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <header class="top-bar">
+    <div class="top-item">
+      <span class="icon-lock">🔒</span>
+      <span class="top-text">COMPRA SEGURA</span>
     </div>
-
-    <!-- Navbar -->
-    <nav class="navbar">
-        <div class="logo-neon">
-            <span class="unik">UNIK</span> <span class="stil">STIL</span>
-        </div>
-        <ul>
-            <li class="active"><span>INÍCIO</span></li>
-            <li>LOJA</li>
-            <li>MINHA CONTA</li>
-            <li>PERGUNTAS FREQUENTES</li>
-            <li>CONTATO</li>
-        </ul>
-        <div class="cart-icon">
-            <img src="https://img.icons8.com/ios-filled/50/000000/shopping-cart.png" alt="carrinho">
-        </div>
-    </nav>
-
-    <!-- Hero Section -->
-    <section class="hero">
-        <div class="hero-text">
-            <p class="headline">NÃO PERCA TEMPO PARA SE VESTIR.</p>
-            <p class="headline">QUALIDADE E MODA É COM A</p>
-            <div class="logo-neon large">
-                <span class="unik">UNIK</span> <span class="stil">STIL</span>
-            </div>
-        </div>
-        <div class="hero-image">
-            <img src="https://i.imgur.com/5v5bLZN.png" alt="camiseta branca" class="shirt-img">
-        </div>
-        <div class="best-clothes">
-            <span>AS MELHORES ROUPAS</span>
-            <img src="https://img.icons8.com/color/48/000000/crown.png" alt="coroa" class="crown">
-        </div>
-    </section>
-
-    <!-- Destaques -->
-    <div class="destaques-bar">
-        <span class="destaques-title">
-            <span class="destaques-underline"></span>
-            <span>destaques</span>
-            <span class="destaques-underline"></span>
-        </span>
+    <div class="top-item">
+      <span class="icon-truck">🛻</span>
+      <span class="top-text">FRETE GRÁTIS</span>
     </div>
+    <div class="top-item">
+      <span class="icon-money">$</span>
+      <span class="top-text">parcele em até em 12x</span>
+    </div>
+  </header>
+  <nav class="main-menu">
+    <div class="logo-glow logo-glow-1">UNIK <span>STIL</span></div>
+    <ul>
+      <li class="active"><span>INÍCIO</span></li>
+      <li>LOJA</li>
+      <li>MINHA CONTA</li>
+      <li>PERGUNTAS FREQUENTES</li>
+      <li>CONTATO</li>
+    </ul>
+    <div class="cart-icon">🛒</div>
+  </nav>
+  <main class="main-content">
+    <div class="slogan">
+      <p>NÃO PERCA TEMPO PARA SE VESTIR.<br>
+      QUALIDADE E MODA É COM A</p>
+      <div class="logo-glow logo-glow-2">UNIK <span>STIL</span></div>
+    </div>
+    <div class="shirt-img">
+      <!-- Use uma imagem real de camiseta aqui se quiser -->
+      <img src="https://pngimg.com/uploads/tshirt/tshirt_PNG5423.png" alt="Camiseta branca">
+    </div>
+    <div class="highlight-box">
+      <span class="crown">👑</span>
+      <span class="highlight-text">AS MELHORES ROUPAS</span>
+    </div>
+  </main>
+  <footer class="footer-bar">
+    <div class="footer-content">
+      <span class="footer-line"></span>
+      <span class="footer-title">destaques</span>
+      <span class="footer-line"></span>
+    </div>
+  </footer>
 </body>
 </html>
