--- a/index.html
+++ b/index.html
@@ -1,77 +1,130 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Unik Stell</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='stylecss'>
-    <script src='main.js'></script>
-</head>
-<body>
-  <!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>Unik Stil | Início</title>
-    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Unik Stil</title>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
- !DOCTYPE html>
-<html lang="pt-br">
-<head>
-  <meta charset="UTF-8">
-  <title>Unik Stil</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <header class="top-bar">
-    <div class="top-item">
-      <span class="icon-lock">🔒</span>
-      <span class="top-text">COMPRA SEGURA</span>
-    </div>
-    <div class="top-item">
-      <span class="icon-truck">🛻</span>
-      <span class="top-text">FRETE GRÁTIS</span>
-    </div>
-    <div class="top-item">
-      <span class="icon-money">$</span>
-      <span class="top-text">parcele em até em 12x</span>
-    </div>
-  </header>
-  <nav class="main-menu">
-    <div class="logo-glow logo-glow-1">UNIK <span>STIL</span></div>
-    <ul>
-      <li class="active"><span>INÍCIO</span></li>
-      <li>LOJA</li>
-      <li>MINHA CONTA</li>
-      <li>PERGUNTAS FREQUENTES</li>
-      <li>CONTATO</li>
-    </ul>
-    <div class="cart-icon">🛒</div>
-  </nav>
-  <main class="main-content">
-    <div class="slogan">
-      <p>NÃO PERCA TEMPO PARA SE VESTIR.<br>
-      QUALIDADE E MODA É COM A</p>
-      <div class="logo-glow logo-glow-2">UNIK <span>STIL</span></div>
-    </div>
-    <div class="shirt-img">
-      <!-- Use uma imagem real de camiseta aqui se quiser -->
-      <img src="https://pngimg.com/uploads/tshirt/tshirt_PNG5423.png" alt="Camiseta branca">
-    </div>
-    <div class="highlight-box">
-      <span class="crown">👑</span>
-      <span class="highlight-text">AS MELHORES ROUPAS</span>
-    </div>
-  </main>
-  <footer class="footer-bar">
-    <div class="footer-content">
-      <span class="footer-line"></span>
-      <span class="footer-title">destaques</span>
-      <span class="footer-line"></span>
-    </div>
-  </footer>
+    <header class="top-bar">
+        <div class="top-item">
+            <span class="icon">🔒</span>
+            <span class="top-text">COMPRA SEGURA</span>
+        </div>
+        <div class="top-item">
+            <span class="icon">🛻</span>
+            <span class="top-text">FRETE GRÁTIS</span>
+        </div>
+        <div class="top-item">
+            <span class="icon">💳</span>
+            <span class="top-text">PARCELE EM ATÉ 12X</span>
+        </div>
+    </header>
+
+    <nav class="main-menu">
+        <div class="logo">UNIK <span>STIL</span></div>
+        <ul>
+            <li><a href="#">INÍCIO</a></li>
+            <li><a href="#">QUEM SOMOS</a></li>
+            <li><a href="#">MINHA CONTA</a></li>
+            <li><a href="#">PERGUNTAS FREQUENTES</a></li>
+            <li><a href="#">DICAS DE CUIDADO</a></li>
+            <li><a href="#">RASTREAMENTO</a></li>
+        </ul>
+        <div class="cart-icon">🛒</div>
+    </nav>
+
+    <main>
+        <div class="carousel-container">
+            <div class="carousel-slide fade">
+                <img src="https://via.placeholder.com/1500x500/0000FF/FFFFFF?text=Slide+1" alt="Slide 1">
+            </div>
+            <div class="carousel-slide fade">
+                <img src="https://via.placeholder.com/1500x500/FF0000/FFFFFF?text=Slide+2" alt="Slide 2">
+            </div>
+            <div class="carousel-slide fade">
+                <img src="https://via.placeholder.com/1500x500/00FF00/FFFFFF?text=Slide+3" alt="Slide 3">
+            </div>
+            <div class="carousel-slide fade">
+                <img src="https://via.placeholder.com/1500x500/FFFF00/000000?text=Slide+4" alt="Slide 4">
+            </div>
+            <div class="carousel-slide fade">
+                <img src="https://via.placeholder.com/1500x500/800080/FFFFFF?text=Slide+5" alt="Slide 5">
+            </div>
+            <a class="prev" onclick="plusSlides(-1)">❮</a>
+            <a class="next" onclick="plusSlides(1)">❯</a>
+        </div>
+
+        <section class="product-section">
+            <h2 class="section-title">DESTAQUES</h2>
+            <div class="product-grid">
+                <a href="#" class="product-card">
+                    <img src="https://via.placeholder.com/300x400/CCCCCC/000000?text=Produto+1" alt="Produto 1">
+                    <div class="product-info">
+                        <h3>Nome do Produto 1</h3>
+                        <p class="product-price">R$ 99,90</p>
+                        <p class="product-sizes">Tamanhos: P, M, G</p>
+                        <p class="product-description">Breve descrição do produto.</p>
+                    </div>
+                </a>
+                <a href="#" class="product-card">
+                    <img src="https://via.placeholder.com/300x400/CCCCCC/000000?text=Produto+2" alt="Produto 2">
+                    <div class="product-info">
+                        <h3>Nome do Produto 2</h3>
+                        <p class="product-price">R$ 120,00</p>
+                        <p class="product-sizes">Tamanhos: M, G, GG</p>
+                        <p class="product-description">Breve descrição do produto.</p>
+                    </div>
+                </a>
+                <a href="#" class="product-card">
+                    <img src="https://via.placeholder.com/300x400/CCCCCC/000000?text=Produto+3" alt="Produto 3">
+                    <div class="product-info">
+                        <h3>Nome do Produto 3</h3>
+                        <p class="product-price">R$ 85,50</p>
+                        <p class="product-sizes">Tamanhos: P, M</p>
+                        <p class="product-description">Breve descrição do produto.</p>
+                    </div>
+                </a>
+                <a href="#" class="product-card">
+                    <img src="https://via.placeholder.com/300x400/CCCCCC/000000?text=Produto+4" alt="Produto 4">
+                    <div class="product-info">
+                        <h3>Nome do Produto 4</h3>
+                        <p class="product-price">R$ 150,00</p>
+                        <p class="product-sizes">Tamanhos: P, M, G, GG</p>
+                        <p class="product-description">Breve descrição do produto.</p>
+                    </div>
+                </a>
+                <a href="#" class="product-card">
+                    <img src="https://via.placeholder.com/300x400/CCCCCC/000000?text=Produto+5" alt="Produto 5">
+                    <div class="product-info">
+                        <h3>Nome do Produto 5</h3>
+                        <p class="product-price">R$ 90,00</p>
+                        <p class="product-sizes">Tamanhos: G, GG</p>
+                        <p class="product-description">Breve descrição do produto.</p>
+                    </div>
+                </a>
+                <a href="#" class="product-card">
+                    <img src="https://via.placeholder.com/300x400/CCCCCC/000000?text=Produto+6" alt="Produto 6">
+                    <div class="product-info">
+                        <h3>Nome do Produto 6</h3>
+                        <p class="product-price">R$ 110,00</p>
+                        <p class="product-sizes">Tamanhos: P, M, G</p>
+                        <p class="product-description">Breve descrição do produto.</p>
+                    </div>
+                </a>
+            </div>
+        </section>
+    </main>
+
+    <footer class="site-footer">
+        <div class="footer-container">
+            <p>UNIK STILL</p>
+            <p>Feito pelos alunos Fabiano, Thiago e Matheus - Todos os direitos reservados - 2025</p>
+        </div>
+    </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
