--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <main>
         <div class="carousel-container">
             <div class="carousel-slide fade">
-                <img src="https://via.placeholder.com/1500x500/0000FF/FFFFFF?text=Slide+1" alt="Slide 1">
+                <img src="banner1.png" alt="Slide 1">
             </div>
             <div class="carousel-slide fade">
                 <img src="https://via.placeholder.com/1500x500/FF0000/FFFFFF?text=Slide+2" alt="Slide 2">
