--- a/index.html
+++ b/index.html
@@ -126,5 +126,19 @@
     </footer>
 
     <script src="script.js"></script>
+    ...
+<nav class="main-menu">
+    <div class="logo">UNIK <span>STIL</span></div>
+    <ul>
+        <li><a href="index.html">INÍCIO</a></li>
+        <li><a href="quem-somos.html">QUEM SOMOS</a></li>
+        <li><a href="#">MINHA CONTA</a></li>
+        <li><a href="#">PERGUNTAS FREQUENTES</a></li>
+        <li><a href="#">DICAS DE CUIDADO</a></li>
+        <li><a href="#">RASTREAMENTO</a></li>
+    </ul>
+    <div class="cart-icon">🛒</div>
+</nav>
+...
 </body>
 </html>
