--- a/index.html
+++ b/index.html
@@ -126,6 +126,17 @@
     </footer>
 
     <script src="script.js"></script>
-    
+    <nav class="main-menu">
+    <div class="logo">UNIK <span>STIL</span></div>
+    <ul>
+        <li><a href="index.html">INÍCIO</a></li>
+        <li><a href="quem-somos.html">QUEM SOMOS</a></li>
+        <li><a href="minha-conta.html">MINHA CONTA</a></li>
+        <li><a href="perguntas-frequentes.html">PERGUNTAS FREQUENTES</a></li>
+        <li><a href="dicas-de-cuidado.html">DICAS DE CUIDADO</a></li>
+        <li><a href="rastreamento.html">RASTREAMENTO</a></li>
+    </ul>
+    <div class="cart-icon">🛒</div>
+</nav>
 </body>
 </html>
