--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="logo">UNIK <span>STIL</span></div>
         <ul>
             <li><a href="#">INÍCIO</a></li>
-            <li><a href="#">QUEM SOMOS</a></li>
+            <li><a href="qsomos.html">QUEM SOMOS</a></li>
             <li><a href="#">MINHA CONTA</a></li>
             <li><a href="#">PERGUNTAS FREQUENTES</a></li>
             <li><a href="#">DICAS DE CUIDADO</a></li>
