--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <section class="product-section">
             <h2 class="section-title">DESTAQUES</h2>
             <div class="product-grid">
-                <a href="#" class="product-card">
+                <a href="pdt1.html" class="product-card">
                     <img src="https://via.placeholder.com/300x400/CCCCCC/000000?text=Produto+1" alt="Produto 1">
                     <div class="product-info">
                         <h3>Nome do Produto 1</h3>
