--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <nav class="main-menu">
         <div class="logo">UNIK <span>STIL</span></div>
         <ul>
-            <li><a href="#">INÍCIO</a></li>
+            <li><a href="index.html">INÍCIO</a></li>
             <li><a href="qsomos.html">QUEM SOMOS</a></li>
             <li><a href="#">MINHA CONTA</a></li>
             <li><a href="#">PERGUNTAS FREQUENTES</a></li>
@@ -39,7 +39,7 @@
     <main>
         <div class="carousel-container">
             <div class="carousel-slide fade">
-                <img src="banner1.png" alt="Slide 1">
+                <img src="touca_1320x680_centered.png" alt="Slide 1">
             </div>
             <div class="carousel-slide fade">
                 <img src="https://via.placeholder.com/1500x500/FF0000/FFFFFF?text=Slide+2" alt="Slide 2">
