--- a/qsomos.html
+++ b/qsomos.html
@@ -27,7 +27,7 @@
     <nav class="main-menu">
         <div class="logo">UNIK <span>STIL</span></div>
         <ul>
-            <li><a href="index.html"">INÍCIO</a></li>
+            <li><a href="index.html">INÍCIO</a></li>
             <li><a href="qsomos.html">QUEM SOMOS</a></li>
             <li><a href="#">MINHA CONTA</a></li>
             <li><a href="#">PERGUNTAS FREQUENTES</a></li>
@@ -63,4 +63,5 @@
     <script src="script.js"></script>
     
 </body>
+
 </html>
