--- a/index.html
+++ b/index.html
@@ -27,9 +27,8 @@
         <div class="logo">UNIK <span>STIL</span></div>
         <ul>
             <li><a href="index.html">INÍCIO</a></li>
-            <li><a href="qsomos.html">QUEM SOMOS</a></li>
+            <li><a href="qsomos.html">PERGUNTAS FREQUENTES</a></li>
             <li><a href="#">MINHA CONTA</a></li>
-            <li><a href="#">PERGUNTAS FREQUENTES</a></li>
             <li><a href="#">DICAS DE CUIDADO</a></li>
             <li><a href="#">RASTREAMENTO</a></li>
         </ul>
