--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <ul>
             <li><a href="index.html">INÍCIO</a></li>
             <li><a href="qsomos.html">PERGUNTAS FREQUENTES</a></li>
-            <li><a href="#">MINHA CONTA</a></li>
+            <li><a href="minhaconta.html">MINHA CONTA</a></li>
             <li><a href="#">DICAS DE CUIDADO</a></li>
             <li><a href="#">RASTREAMENTO</a></li>
         </ul>
