--- a/minhaconta.html
+++ b/minhaconta.html
@@ -34,7 +34,23 @@
         </ul>
         <div class="cart-icon">🛒</div>
     </nav>
-
+<main class="login-container">
+    <div class="login-box">
+        <h2>Acesse sua conta</h2>
+        <form action="#" method="POST">
+            <div class="input-group">
+                <label for="email">E-mail ou Usuário</label>
+                <input type="text" id="email" name="email" required>
+            </div>
+            <div class="input-group">
+                <label for="password">Senha</label>
+                <input type="password" id="password" name="password" required>
+            </div>
+            <button type="submit" class="login-button">Entrar</button>
+            <a href="#" class="forgot-password">Esqueceu sua senha?</a>
+        </form>
+    </div>
+</main>
    
 </body>
 </html>
