--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
             <li><a href="index.html">INÍCIO</a></li>
             <li><a href="qsomos.html">PERGUNTAS FREQUENTES</a></li>
             <li><a href="minhaconta.html">MINHA CONTA</a></li>
-            <li><a href="#"><dicasdcuid class="html"></dicasdcuid></a></li>
-            <li><a href="#">RASTREAMENTO</a></li>
+            <li><a href="dicas.html">DICAS DE CUIDADO</a></li>
+            <li><a href="rastreamento.html">RASTREAMENTO</a></li>
         </ul>
         <div class="cart-icon">🛒</div>
     </nav>
