--- a/dicas.html
+++ b/dicas.html
@@ -42,43 +42,43 @@
             
             <ol>
                 <li>
-                    <h2>Leia as etiquetas</h2>
+                    <h>Leia as etiquetas</>
                     <p>As etiquetas indicam a composição do tecido e as instruções específicas de lavagem. Respeitar essas recomendações ajuda a evitar danos, como encolhimento ou desbotamento.</p>
                 </li>
                 <li>
-                    <h2>Separe as roupas por cor e tipo de tecido</h2>
+                    <>Separe as roupas por cor e tipo de tecido</>
                     <p>Roupas claras e escuras devem ser lavadas separadas para evitar manchas. Tecidos delicados, como seda e lã, merecem tratamento especial. Lave-os com água fria e use um sabão neutro.</p>
                 </li>
                 <li>
-                    <h2>Evite excesso de sabão e amaciante</h2>
+                    <>Evite excesso de sabão e amaciante</>
                     <p>Usar sabão em excesso pode deixar resíduos nas fibras do tecido, prejudicando a maciez e a durabilidade. Amaciantes também devem ser usados com moderação para não enfraquecer os tecidos.</p>
                 </li>
                 <li>
-                    <h2>Não sobrecarregue a máquina de lavar</h2>
+                    <>Não sobrecarregue a máquina de lavar</>
                     <p>Roupas precisam de espaço para se mover e limpar adequadamente. Se a máquina estiver muito cheia, as roupas não serão lavadas de maneira eficiente.</p>
                 </li>
                 <li>
-                    <h2>Lave com água fria sempre que possível</h2>
+                    <>Lave com água fria sempre que possível</>
                     <p>A água fria ajuda a preservar as cores, evita o encolhimento e economiza energia. Para roupas mais delicadas, como malhas e lingerie, lave sempre à mão.</p>
                 </li>
                 <li>
-                    <h2>Cuide das roupas delicadas</h2>
+                    <>Cuide das roupas delicadas</>
                     <p>Peças de roupas delicadas, como lingeries e roupas com detalhes como renda, devem ser lavadas à mão ou dentro de um saco protetor na máquina.</p>
                 </li>
                 <li>
-                    <h2>Evite a secagem excessiva no sol</h2>
+                    <>Evite a secagem excessiva no sol<>
                     <p>O sol pode desbotar as cores e enfraquecer as fibras do tecido. Quando possível, pendure suas roupas à sombra ou use secadora em temperatura baixa.</p>
                 </li>
                 <li>
-                    <h2>Guarde suas roupas corretamente</h2>
+                    <>Guarde suas roupas corretamente</>
                     <p>Pendure as peças que podem se deformar (como camisas, vestidos e calças) em cabides adequados. Guarde roupas de inverno em sacos de tecido ou capas protetoras para evitar danos causados por poeira e traças.</p>
                 </li>
                 <li>
-                    <h2>Passar a ferro na temperatura certa</h2>
+                    <>Passar a ferro na temperatura certa<2>
                     <p>Sempre ajuste a temperatura do ferro de acordo com o tipo de tecido. Tecidos sintéticos e delicados não devem ser passados a altas temperaturas, enquanto algodão e linho podem suportar temperaturas mais altas.</p>
                 </li>
                 <li>
-                    <h2>Trate manchas imediatamente</h2>
+                    <>Trate manchas imediatamente</>
                     <p>Quanto mais rápido você agir, mais fácil será remover a mancha. Use produtos específicos para cada tipo de mancha e teste em uma parte discreta da peça antes de aplicar.</p>
                 </li>
             </ol>
