--- a/pdt1.html
+++ b/pdt1.html
@@ -29,7 +29,7 @@
             <li><a href="#">INÍCIO</a></li>
             <li><a href="qsomos.html">PERGUNTAS FREQUENTES</a></li>
             <li><a href="minhaconta.html">MINHA CONTA</a></li>
-            <li><a href="#">DICAS DE CUIDADO</a></li>
+            <li><a href="dicas.html">DICAS DE CUIDADO</a></li>
             <li><a href="#">RASTREAMENTO</a></li>
         </ul>
         <div class="cart-icon">🛒</div>
