--- a/minhaconta.html
+++ b/minhaconta.html
@@ -6,7 +6,7 @@
     <title>Unik Stil</title>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <script type="module" src="script.js"></script>
+    <script type="module" src="login.js"></script>
 </head>
 <body>
     <header class="top-bar">
@@ -70,6 +70,8 @@
     </div>
 
     <!-- PANE DE CADASTRO -->
+
+  
     <div id="register-pane" class="pane">
       <form id="registerForm" class="form">
         <div class="field">
