--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
                 <img src="touca_1320x680_centered.png" alt="Slide 1">
             </div>
             <div class="carousel-slide fade">
-                <img src="https://via.placeholder.com/1500x500/FF0000/FFFFFF?text=Slide+2" alt="Slide 2">
+                <img src="bermuda.jpeg" alt="Slide 2">
             </div>
             <div class="carousel-slide fade">
-                <img src="https://via.placeholder.com/1500x500/00FF00/FFFFFF?text=Slide+3" alt="Slide 3">
+                <img src="camisa cinza.jpeg" alt="Slide 3">
             </div>
             <div class="carousel-slide fade">
                 <img src="https://via.placeholder.com/1500x500/FFFF00/000000?text=Slide+4" alt="Slide 4">
