--- a/minhaconta.html
+++ b/minhaconta.html
@@ -39,7 +39,7 @@
 
     <!--Painel do professor login-->
 
-     <div class="container auth">
+   <div class="container auth">
     <div class="tabs">
       <button class="tab active" data-tab="login-pane">Login</button>
       <button class="tab" data-tab="register-pane">Cadastro</button>
@@ -70,8 +70,6 @@
     </div>
 
     <!-- PANE DE CADASTRO -->
-
-  
     <div id="register-pane" class="pane">
       <form id="registerForm" class="form">
         <div class="field">
@@ -109,6 +107,19 @@
     <p id="welcomeUser"></p>
     <button id="logoutBtn" class="btn">Sair</button>
   </div>
+
+  <footer>
+    <p>© 2025 | Profº Antonio Carlos</p>
+  </footer>
+
+
+   <script type="module" src="login.js">
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"&gt;
+ 
+
+
+   </script>
+
 
  
        
