--- a/minhaconta.html
+++ b/minhaconta.html
@@ -1,4 +1,4 @@
- <!doctype html>
+<!doctype html>
 <html lang="pt-BR">
 <head>
   <meta charset="utf-8" />
@@ -85,7 +85,7 @@
 
 
    <script type="module" src="login.js"></script>
- <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"&gt; </script></script>
+ <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"&gt;</script>
  
 
 
