--- a/minhaconta.html
+++ b/minhaconta.html
@@ -77,7 +77,7 @@
 
 
    <script type="module" src="login.js"></script>
- <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"&gt;</script>
+ <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"&gt;</script></script>
  
 
 
