--- a/login.html
+++ b/login.html
@@ -8,7 +8,52 @@
 </head>
 <body>
 
-  
+   <header class="top-bar">
+        <div class="top-item">
+            <span class="icon">🔒</span>
+            <span class="top-text">COMPRA SEGURA</span>
+        </div>
+        <div class="top-item">
+            <span class="icon">🛻</span>
+            <span class="top-text">FRETE GRÁTIS</span>
+        </div>
+        <div class="top-item">
+            <span class="icon">💳</span>
+            <span class="top-text">PARCELE EM ATÉ 12X</span>
+        </div>
+    </header>
+
+    <nav class="main-menu">
+        <div class="logo">UNIK <span>STIL</span></div>
+        <ul>
+            <li><a href="index.html">INÍCIO</a></li>
+            <li><a href="qsomos.html">PERGUNTAS FREQUENTES</a></li>
+            <li><a href="minhaconta.html">MINHA CONTA</a></li>
+            <li><a href="dicas.html">DICAS DE CUIDADO</a></li>
+            <li><a href="rastreamento.html">RASTREAMENTO</a></li>
+        </ul>
+        <div class="cart-icon">🛒</div>
+    </nav>
+    <main>
+        <div class="carousel-container">
+            <div class="carousel-slide fade">
+                <img src="touca_1320x680_centered.png" alt="Slide 1">
+            </div>
+            <div class="carousel-slide fade">
+                <img src="bermuda.jpeg" alt="Slide 2">
+            </div>
+            <div class="carousel-slide fade">
+                <img src="camisa cinza.jpeg" alt="Slide 3">
+            </div>
+            <div class="carousel-slide fade">
+                <img src="https://via.placeholder.com/1500x500/FFFF00/000000?text=Slide+4" alt="Slide 4">
+            </div>
+            <div class="carousel-slide fade">
+                <img src="https://via.placeholder.com/1500x500/800080/FFFFFF?text=Slide+5" alt="Slide 5">
+            </div>
+            <a class="prev" onclick="plusSlides(-1)">❮</a>
+            <a class="next" onclick="plusSlides(1)">❯</a>
+        </div>
 
   <div class="container auth">
     <div class="tabs">
