--- a/login.html
+++ b/login.html
@@ -2,58 +2,29 @@
 <html lang="pt-BR">
 <head>
   <meta charset="utf-8" />
-  <title>Cadastro/Login</title>
+  <title>Cadastro/Login - Supabase</title>
   <link rel="stylesheet" href="login.css">
   
 </head>
 <body>
 
-   <header class="top-bar">
-        <div class="top-item">
-            <span class="icon">🔒</span>
-            <span class="top-text">COMPRA SEGURA</span>
-        </div>
-        <div class="top-item">
-            <span class="icon">🛻</span>
-            <span class="top-text">FRETE GRÁTIS</span>
-        </div>
-        <div class="top-item">
-            <span class="icon">💳</span>
-            <span class="top-text">PARCELE EM ATÉ 12X</span>
-        </div>
-    </header>
-
-    <nav class="main-menu">
-        <div class="logo">UNIK <span>STIL</span></div>
-        <ul>
-            <li><a href="index.html">INÍCIO</a></li>
-            <li><a href="qsomos.html">PERGUNTAS FREQUENTES</a></li>
-            <li><a href="minhaconta.html">MINHA CONTA</a></li>
-            <li><a href="dicas.html">DICAS DE CUIDADO</a></li>
-            <li><a href="rastreamento.html">RASTREAMENTO</a></li>
-        </ul>
-        <div class="cart-icon">🛒</div>
+  <!-- Menu fixo -->
+  <header>
+    <nav class="navbar">
+      <h1 class="logo">TCC em Sistemas</h1>
+      <ul class="nav-links">
+        <li><a href="#sobre">O que é TCC</a></li>
+        <li><a href="#importancia">Importância</a></li>
+        <li><a href="#etapas">Etapas</a></li>
+        <li><a href="#habilidades">Habilidades</a></li>
+        <li><a href="#dicas">Dicas</a></li>
+        <li><a href="#futuro">Futuro</a></li>
+        <li><a href="#links">Links Úteis</a></li>
+        <li><a href="login.html">Login</a></li>
+      </ul>
     </nav>
-    <main>
-        <div class="carousel-container">
-            <div class="carousel-slide fade">
-                <img src="touca_1320x680_centered.png" alt="Slide 1">
-            </div>
-            <div class="carousel-slide fade">
-                <img src="bermuda.jpeg" alt="Slide 2">
-            </div>
-            <div class="carousel-slide fade">
-                <img src="camisa cinza.jpeg" alt="Slide 3">
-            </div>
-            <div class="carousel-slide fade">
-                <img src="https://via.placeholder.com/1500x500/FFFF00/000000?text=Slide+4" alt="Slide 4">
-            </div>
-            <div class="carousel-slide fade">
-                <img src="https://via.placeholder.com/1500x500/800080/FFFFFF?text=Slide+5" alt="Slide 5">
-            </div>
-            <a class="prev" onclick="plusSlides(-1)">❮</a>
-            <a class="next" onclick="plusSlides(1)">❯</a>
-        </div>
+  </header>
+
 
   <div class="container auth">
     <div class="tabs">
@@ -125,7 +96,7 @@
   </div>
 
   <footer>
-    <p>© 2025 - UnikStil</p>
+    <p>© 2025 - A importância do TCC em Desenvolvimento de Sistemas | Profº Antonio Carlos</p>
   </footer>
 
 
