--- a/pdt1.html
+++ b/pdt1.html
@@ -34,7 +34,135 @@
         </ul>
         <div class="cart-icon">🛒</div>
     </nav>
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Detalhes do Produto - Simulação</title>
+    <style>
+        /* Estilos básicos */
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 20px;
+            background-color: #f8f8f8;
+        }
 
+        .container {
+            display: flex;
+            max-width: 1200px;
+            margin: 0 auto;
+            background-color: #fff;
+            padding: 20px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        /* Seção de Imagens */
+        .product-images {
+            display: flex;
+            width: 50%;
+        }
+
+        .image-previews {
+            width: 100px;
+            margin-right: 20px;
+            display: flex;
+            flex-direction: column;
+        }
+
+        .preview-item {
+            width: 80px;
+            height: 100px;
+            margin-bottom: 10px;
+            border: 1px solid #ccc;
+            cursor: pointer;
+            overflow: hidden;
+            background-color: #eee;
+        }
+
+        .preview-item img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            transition: border 0.2s;
+        }
+
+        .preview-item.selected {
+            border: 2px solid #a52a2a; /* Cor de destaque */
+        }
+
+        .main-image {
+            flex-grow: 1;
+        }
+
+        .main-image img {
+            width: 100%;
+            height: auto;
+            max-height: 600px;
+            object-fit: contain;
+        }
+
+        /* Seção de Detalhes */
+        .product-details {
+            width: 50%;
+            padding-left: 40px;
+        }
+
+        h1 {
+            font-size: 1.5em;
+            margin-top: 0;
+        }
+
+        .rating {
+            color: orange;
+            font-weight: bold;
+            margin-bottom: 15px;
+            display: block;
+        }
+
+        .price-old {
+            color: #888;
+            text-decoration: line-through;
+            font-size: 0.9em;
+        }
+
+        .price-current {
+            font-size: 1.8em;
+            color: #000;
+            font-weight: bold;
+            display: block;
+            margin: 5px 0 10px;
+        }
+
+        .installment {
+            color: #555;
+            font-size: 0.9em;
+            margin-bottom: 20px;
+        }
+
+        .color-options {
+            margin-bottom: 20px;
+        }
+
+        .color-circle {
+            width: 30px;
+            height: 30px;
+            border-radius: 50%;
+            display: inline-block;
+            margin-right: 10px;
+            cursor: pointer;
+            border: 2px solid #ccc;
+            transition: border 0.2s;
+        }
+
+        .color-circle:hover, .color-circle.selected {
+            border-color: #000;
+        }
+
+        /* Cores de Exemplo */
+        .color-marrom { background-color: #8b4513; }
+        .
 
 
 
