--- a/pdt1.html
+++ b/pdt1.html
@@ -1,127 +1,323 @@
-]<!DOCTYPE html>
-<html lang="pt-BR">
+<!DOCTYPE html>
+<html lang="pt-br">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Camiseta com Textura</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #fff;
-      margin: 0;
-      padding: 0;
-    }
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Unik Stil</title>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Detalhes do Produto - Simulação</title>
+    <style>
+        /* Estilos básicos */
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 20px;
+            background-color: #f8f8f8;
+        }
 
-    .container {
-      max-width: 1000px;
-      margin: auto;
-      padding: 20px;
-    }
+        .container {
+            display: flex;
+            max-width: 1200px;
+            margin: 0 auto;
+            background-color: #fff;
+            padding: 20px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
 
-    .gallery {
-      display: flex;
-      gap: 10px;
-      margin-bottom: 20px;
-    }
+        /* Seção de Imagens */
+        .product-images {
+            display: flex;
+            width: 50%;
+        }
 
-    .main-image {
-      width: 100%;
-      max-height: 500px;
-      object-fit: cover;
-      border: 2px solid #ccc;
-    }
+        .image-previews {
+            width: 100px;
+            margin-right: 20px;
+            display: flex;
+            flex-direction: column;
+        }
 
-    .thumbnails img {
-      width: 100px;
-      height: 100px;
-      object-fit: cover;
-      cursor: pointer;
-      border: 2px solid #ccc;
-    }
+        .preview-item {
+            width: 80px;
+            height: 100px;
+            margin-bottom: 10px;
+            border: 1px solid #ccc;
+            cursor: pointer;
+            overflow: hidden;
+            background-color: #eee;
+        }
 
-    .product-info {
-      margin-top: 20px;
-    }
+        .preview-item img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            transition: border 0.2s;
+        }
 
-    .product-info h1 {
-      font-size: 24px;
-      margin-bottom: 10px;
-    }
+        /* Cor de destaque da miniatura mudada para preto para combinar com o destaque da cor */
+        .preview-item.selected {
+            border: 2px solid #000;
+        }
 
-    .price {
-      font-size: 20px;
-      color: #333;
-      margin-bottom: 10px;
-    }
+        .main-image {
+            flex-grow: 1;
+        }
 
-    .installments {
-      font-size: 16px;
-      color: #666;
-      margin-bottom: 20px;
-    }
+        .main-image img {
+            width: 100%;
+            height: auto;
+            max-height: 600px;
+            object-fit: contain;
+        }
 
-    .sizes {
-      margin-bottom: 20px;
-    }
+        /* Seção de Detalhes */
+        .product-details {
+            width: 50%;
+            padding-left: 40px;
+        }
 
-    .sizes label {
-      margin-right: 10px;
-    }
+        h1 {
+            font-size: 1.5em;
+            margin-top: 0;
+        }
 
-    .buy-button {
-      background-color: #FFD700;
-      color: #000;
-      padding: 15px 30px;
-      border: none;
-      font-size: 16px;
-      cursor: pointer;
-      transition: background-color 0.3s ease;
-    }
+        .rating {
+            color: orange;
+            font-weight: bold;
+            margin-bottom: 15px;
+            display: block;
+        }
 
-    .buy-button:hover {
-      background-color: #FFC300;
-    }
-  </style>
+        .price-old {
+            color: #888;
+            text-decoration: line-through;
+            font-size: 0.9em;
+        }
+
+        .price-current {
+            font-size: 1.8em;
+            color: #000;
+            font-weight: bold;
+            display: block;
+            margin: 5px 0 10px;
+        }
+
+        .installment {
+            color: #555;
+            font-size: 0.9em;
+            margin-bottom: 20px;
+        }
+
+        .color-options {
+            margin-bottom: 20px;
+        }
+
+        .color-circle {
+            width: 30px;
+            height: 30px;
+            border-radius: 50%;
+            display: inline-block;
+            margin-right: 10px;
+            cursor: pointer;
+            border: 2px solid #ccc;
+            transition: border 0.2s;
+        }
+
+        .color-circle:hover, .color-circle.selected {
+            border-color: #000;
+        }
+
+        /* Cores de Exemplo: Adicionado Branco e removido Marrom, Preto e Verde */
+        .color-branco { 
+            background-color: #ffffff;
+            /* Adicionado uma sombra suave para o branco aparecer em fundo branco */
+            box-shadow: 0 0 0 1px #ccc inset; 
+        }
+
+        /* Opções de Tamanho */
+        .size-options {
+            margin-bottom: 30px;
+        }
+
+        .size-button {
+            padding: 10px 15px;
+            margin-right: 10px;
+            border: 1px solid #ccc;
+            background-color: #fff;
+            cursor: pointer;
+            font-weight: bold;
+            transition: background-color 0.2s, border-color 0.2s;
+        }
+
+        .size-button:hover {
+            border-color: #000;
+        }
+
+        .size-button.selected {
+            background-color: #000;
+            color: #fff;
+            border-color: #000;
+        }
+
+        /* Botão de Compra: COR ALTERADA PARA AMARELO */
+        .buy-button {
+            width: 100%;
+            padding: 15px;
+            background-color: #ffc107; /* AMARELO */
+            color: #000; /* Cor do texto alterada para preto para contraste */
+            border: none;
+            cursor: pointer;
+            font-size: 1.2em;
+            font-weight: bold;
+            margin-top: 15px;
+        }
+
+        .buy-button:hover {
+            background-color: #e0a800; /* Um tom de amarelo mais escuro no hover */
+        }
+
+        .product-info {
+            margin-top: 30px;
+            border-top: 1px solid #eee;
+            padding-top: 20px;
+        }
+    </style>
 </head>
 <body>
-  <div class="container">
-    <div class="gallery">
-      <img id="mainImage" class="main-image" src="foto1.jpg" alt="Camiseta Principal">
-      <div class="thumbnails">
-        <img src="foto1.jpg" onclick="changeImage(this.src)" alt="Miniatura 1">
-        <img src="foto2.jpg" onclick="changeImage(this.src)" alt="Miniatura 2">
-        <img src="foto3.jpg" onclick="changeImage(this.src)" alt="Miniatura 3">
-        <img src="foto4.jpg" onclick="changeImage(this.src)" alt="Miniatura 4">
-      </div>
+    <header class="top-bar">
+        <div class="top-item">
+            <span class="icon">🔒</span>
+            <span class="top-text">COMPRA SEGURA</span>
+        </div>
+        <div class="top-item">
+            <span class="icon">🛻</span>
+            <span class="top-text">FRETE GRÁTIS</span>
+        </div>
+        <div class="top-item">
+            <span class="icon">💳</span>
+            <span class="top-text">PARCELE EM ATÉ 12X</span>
+        </div>
+    </header>
+
+    <nav class="main-menu">
+        <div class="logo">UNIK <span>STIL</span></div>
+        <ul>
+            <li><a href="index.html">INÍCIO</a></li>
+            <li><a href="qsomos.html">PERGUNTAS FREQUENTES</a></li>
+            <li><a href="minhaconta.html">MINHA CONTA</a></li>
+            <li><a href="dicas.html">DICAS DE CUIDADO</a></li>
+            <li><a href="rastreamento.html">RASTREAMENTO</a></li>
+        </ul>
+        <div class="cart-icon">🛒</div>
+    </nav>
+    
+
+    <div class="container">
+        <div class="product-images">
+            <div class="image-previews" id="image-previews">
+                <div class="preview-item selected" data-color="branco" data-img-url="https://i.imgur.com/gK9qQxY.png">
+                    <img src="https://i.imgur.com/gK9qQxY.png" alt="Miniatura Branca 1">
+                </div>
+                <div class="preview-item" data-color="branco" data-img-url="https://i.imgur.com/G5yN5r7.png">
+                    <img src="https://i.imgur.com/G5yN5r7.png" alt="Miniatura Branca 2">
+                </div>
+                </div>
+            <div class="main-image">
+                <img id="main-product-image" src="https://i.imgur.com/gK9qQxY.png" alt="Camiseta Ribana Branca">
+            </div>
+        </div>
+
+        <div class="product-details">
+            <h1>Camiseta Em Ribana Com Textura Aveludada Branca</h1>
+            <span class="rating">★ 4.6</span>
+
+            <span class="price-old">De R$ 119,90</span>
+            <span class="price-current">Por R$ 99,90</span>
+            <span class="installment">3x de R$ 33,30 sem juros no Cartão Exemplo</span>
+
+            <div class="color-options">
+                <p>Cor: <span id="selected-color-name">Branco</span></p>
+                <div class="color-circle color-branco selected" data-color="Branco"></div>
+            </div>
+
+            <div class="size-options">
+                <p>Tamanho:</p>
+                <button class="size-button" data-size="P">P</button>
+                <button class="size-button" data-size="M">M</button>
+                <button class="size-button" data-size="G">G</button>
+            </div>
+
+            <button class="buy-button" onclick="alert('Produto adicionado ao carrinho! Tamanho: ' + getSelectedSize() + ', Cor: ' + document.getElementById('selected-color-name').textContent);">COMPRAR</button>
+
+            <div class="product-info">
+                <h2>Sobre o produto:</h2>
+                <p>Camiseta masculina confeccionada em tecido de ribana com textura aveludada. Modelagem ajustada, gola redonda e mangas curtas. Perfeita para um visual moderno e confortável.</p>
+                <p>Vendido e Entregue por: **Loja Exemplo**</p>
+            </div>
+        </div>
     </div>
 
-    <div class="product-info">
-      <h1>Camiseta Em Ribana Com Textura Aveludada Marrom</h1>
-      <div class="price">R$ 98,90 <span style="color: green;">(15% OFF)</span></div>
-      <div class="installments">ou 2x de R$ 49,45 sem juros no Cartão Renner</div>
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            const mainImage = document.getElementById('main-product-image');
+            const colorCircles = document.querySelectorAll('.color-circle');
+            const sizeButtons = document.querySelectorAll('.size-button');
+            const previewItems = document.querySelectorAll('.preview-item');
+            const selectedColorName = document.getElementById('selected-color-name');
 
-      <div class="sizes">
-        <strong>Tamanhos:</strong><br>
-        <label><input type="radio" name="size" value="PP"> PP</label>
-        <label><input type="radio" name="size" value="P"> P</label>
-        <label><input type="radio" name="size" value="M"> M</label>
-        <label><input type="radio" name="size" value="G"> G</label>
-        <label><input type="radio" name="size" value="GG"> GG</label>
-        <label><input type="radio" name="size" value="XG"> XG</label>
-      </div>
+            // --- Função de Seleção de Cor/Imagem ---
+            colorCircles.forEach(circle => {
+                circle.addEventListener('click', () => {
+                    // 1. Mudar o destaque da cor
+                    colorCircles.forEach(c => c.classList.remove('selected'));
+                    circle.classList.add('selected');
 
-      <div class="colors">
-        <strong>Cor disponível:</strong> Branco
-      </div>
+                    // 2. Atualizar o nome da cor
+                    const newColor = circle.getAttribute('data-color');
+                    selectedColorName.textContent = newColor;
 
-      <br><button class="buy-button">COMPRAR</button>
-    </div>
-  </div>
+                    // 3. Atualizar a imagem principal com a primeira miniatura da cor selecionada
+                    const firstImageForColor = Array.from(previewItems).find(item => item.getAttribute('data-color').toLowerCase() === newColor.toLowerCase());
 
-  <script>
-    function changeImage(src) {
-      document.getElementById('mainImage').src = src;
-    }
-  </script>
+                    if (firstImageForColor) {
+                        mainImage.src = firstImageForColor.getAttribute('data-img-url');
+                        
+                        // 4. Mudar o destaque da miniatura
+                        previewItems.forEach(p => p.classList.remove('selected'));
+                        firstImageForColor.classList.add('selected');
+                    }
+                });
+            });
+
+            // --- Função de Mudança de Miniatura ---
+            previewItems.forEach(item => {
+                item.addEventListener('click', () => {
+                    // 1. Mudar o destaque da miniatura
+                    previewItems.forEach(p => p.classList.remove('selected'));
+                    item.classList.add('selected');
+
+                    // 2. Mudar a imagem principal
+                    mainImage.src = item.getAttribute('data-img-url');
+                });
+            });
+
+
+            // --- Função de Seleção de Tamanho ---
+            sizeButtons.forEach(button => {
+                button.addEventListener('click', () => {
+                    sizeButtons.forEach(b => b.classList.remove('selected'));
+                    button.classList.add('selected');
+                });
+            });
+
+            // Adiciona uma função para pegar o tamanho selecionado no clique do botão COMPRAR
+            window.getSelectedSize = function() {
+                const selectedSize = document.querySelector('.size-button.selected');
+                return selectedSize ? selectedSize.getAttribute('data-size') : 'Nenhum selecionado';
+            }
+        });
+    </script>
 </body>
 </html>
